--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-APP_PORT = 3092
+PORT = 3092
 JWT_SECRET_KEY = 'V2cfhGpwLt7c7dKgIY0s'
 MONGODB_URI = "mongodb+srv://tdcx:QYqbUsdVGdifTzqh@cluster0.asw5svz.mongodb.net/tdcx"
